--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,22 +1,18 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Add Labels
 
 on:
   pull_request:
     branches: [ master ]
 
 jobs:
-  build:
+  Labels:
     env:
      Github : ${{ secrets.Github }}
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x]
-
+    
     steps:
     - uses: actions/checkout@v2
     - name: Check PR title
