--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,19 +1,24 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: ADD LABELS
+name: Node.js CI
 
 on:
   pull_request:
     branches: [ master ]
 
 jobs:
-  labeler:
-    runs-on: [ubuntu-latest]
+  build:
     env:
      Github : ${{ secrets.Github }}
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x]
 
     steps:
+    - uses: actions/checkout@v2
     - name: Check PR title
       uses: ./
  
